--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -386,6 +386,46 @@ pre code {
   overflow: hidden;
 }
 
+/* ======= Event page ======== */
+.events .title{
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+
+.events .workshop{
+  background-color: rgba(213, 80, 42, 0.25);
+}
+
+.events .portal{
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.events .back-event{
+  padding: 5px;
+  margin-right: 10px;
+  border-radius: 5%;
+}
+.events .back-event-workshop{
+  border: 1px solid #D5502A;
+}
+.events .back-event-portal{
+  border: 1px solid #000;
+}
+.events .fa{
+  margin-right: 5px;
+}
+
+/* ======= Materials page ======== */
+.presentations .title{
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+
+.presentations .panel-heading{
+  background-color: rgba(213, 80, 42, 0.25);
+}
+
+
 /* ======= Contact Section ======= */
 .contact {
   padding: 80px 0;
