--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title"> Presentations</h3>
-                        <p class="text-justify"><a href="{{ site.url }}/presentation">LINK</a> <br>
+                        <p class="text-justify"><a href="{{ site.url }}/event">LINK</a> <br>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sodales neque, in dignissim diam pulvinar at. Donec venenatis pulvinar erat, a volutpat tellus efficitur. </p>
                     </div><!--//content-->
                 </div><!--//item-->             
