--- a/_includes/event.html
+++ b/_includes/event.html
@@ -2,35 +2,58 @@
     <section id="event" class="modules events section">
         <div class="container">  
             <h2 class="title text-center">Living Atlases events</h2>  
-
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 {% for event in site.data.events %}
-                        <div class="panel panel-default">
-                            {% if event.type=="Portal" %}
-                                <div class="button panel-heading portal" data-toggle="collapse" data-target="#{{ event.id }}">
-                                    <span class="back-event back-event-portal">{{ event.type }}</span> {{ event.title }}
-                                </div>
-                            {% elsif event.type=="Workshop" %}
-                                <div class="button panel-heading workshop" data-toggle="collapse" data-target="#{{ event.id }}">
-                                    <span class="back-event back-event-workshop">{{ event.type }}</span> {{ event.title }}
-                                </div>
-                            {% endif %}
-                            {% if event.valide==true %}
-                                <div id="{{ event.id }}" class="panel-collapse collapse in">
-                            {% elsif event.valide==false %}
-                                <div id="{{ event.id }}" class="panel-collapse collapse ">
-                            {% endif %}  
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="panel-body"> <i class="fa fa-calendar"></i> {{ event.date }}</div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="panel-body"><i class="fa fa-map-marker"></i> {{ event.place }} </div>
-                                    </div>
-                                </div>
-                                <div class="panel-body">{{ event.description }}</div>
+                    <div class="panel panel-default">
+                        {% if event.type=="Portal" %}
+                            <div class="button panel-heading portal" data-toggle="collapse" data-target="#{{ event.id }}">
+                                <span class="back-event back-event-portal">{{ event.type }}</span> {{ event.title }}
                             </div>
-                        </div>                
+                        {% elsif event.type=="Workshop" %}
+                            <div class="button panel-heading workshop" data-toggle="collapse" data-target="#{{ event.id }}">
+                                <span class="back-event back-event-workshop">{{ event.type }}</span> {{ event.title }}
+                            </div>
+                        {% elsif event.type=="Conference" %}
+                            <div class="button panel-heading conference" data-toggle="collapse" data-target="#{{ event.id }}">
+                                <span class="back-event back-event-conference">{{ event.type }}</span> {{ event.title }}
+                            </div>
+                        {% endif %}
+                        {% if event.valide==true %}
+                            <div id="{{ event.id }}" class="panel-collapse collapse in">
+                        {% elsif event.valide==false %}
+                            <div id="{{ event.id }}" class="panel-collapse collapse ">
+                        {% endif %}  
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="panel-body"> <i class="fa fa-calendar"></i> {{ event.date }}</div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="panel-body"><i class="fa fa-map-marker"></i> {{ event.place }} </div>
+                                </div>
+                            </div>
+                            <div class="panel-body">{{ event.description }}</div>
+                             <table class="table panel-body">
+                                <thead>
+                                    <tr>
+                                        <th>Title</th>
+                                        <th>Speaker</th>
+                                        <th>Type</th>
+                                    <tr>
+                                </thead>
+                                {% for material in site.data.materials %}
+                                    {% if material.event_id == event.id %}
+                                        <tbody>
+                                            <tr>
+                                                <td>{{ material.title }}</td>
+                                                <td>{{ material.speaker }}</td>
+                                                <td>{{ material.type }}</td>
+                x                            </tr>
+                                        </tbody>                                
+                                    {% endif %}
+                                {% endfor %}
+                            </table>
+                        </div>    
+                    </div>                
                 {% endfor %}
             </div>
         </div><!--//container-->
