--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -400,6 +400,10 @@ pre code {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
+.events .conference{
+  background-color: rgba(88,153,88, 0.25);
+}
+
 .events .back-event{
   padding: 5px;
   margin-right: 10px;
@@ -410,6 +414,9 @@ pre code {
 }
 .events .back-event-portal{
   border: 1px solid #000;
+}
+.events .back-event-conference{
+  border: 1px solid #589958;
 }
 .events .fa{
   margin-right: 5px;
