--- a/_includes/event.html
+++ b/_includes/event.html
@@ -3,21 +3,19 @@
         <div class="container">  
             <h2 class="title text-center">Living Atlases events</h2>  
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                {% for event in site.data.events %}
+                {% for event_hash in site.data.events reversed %}
+                {% assign event = event_hash[1] %}
                     <div class="panel panel-default">
-                        {% if event.type=="Portal" %}
-                            <div class="button panel-heading portal" data-toggle="collapse" data-target="#{{ event.id }}">
-                                <span class="back-event back-event-portal">{{ event.type }}</span> {{ event.title }}
-                            </div>
-                        {% elsif event.type=="Workshop" %}
-                            <div class="button panel-heading workshop" data-toggle="collapse" data-target="#{{ event.id }}">
-                                <span class="back-event back-event-workshop">{{ event.type }}</span> {{ event.title }}
-                            </div>
-                        {% elsif event.type=="Conference" %}
-                            <div class="button panel-heading conference" data-toggle="collapse" data-target="#{{ event.id }}">
-                                <span class="back-event back-event-conference">{{ event.type }}</span> {{ event.title }}
-                            </div>
-                        {% endif %}
+                        
+                            <div class="button panel-heading" data-toggle="collapse" data-target="#{{ event.id }}">
+                                {% if event.type=="Portal" %}
+                                    <span class="back-event back-event-portal">{{ event.type }}</span> {{ event.title }}
+                                {% elsif event.type=="Workshop" %}
+                                    <span class="back-event back-event-workshop">{{ event.type }}</span> {{ event.title }}
+                                {% elsif event.type=="Conference" %}
+                                    <span class="back-event back-event-conference">{{ event.type }}</span> {{ event.title }}
+                                {% endif %}
+                            </div> 
                         {% if event.valide==true %}
                             <div id="{{ event.id }}" class="panel-collapse collapse in">
                         {% elsif event.valide==false %}
@@ -35,22 +33,20 @@
                              <table class="table panel-body">
                                 <thead>
                                     <tr>
-                                        <th>Title</th>
-                                        <th>Speaker</th>
-                                        <th>Type</th>
+                                        <th class="event-table">Title</th>
+                                        <th >Speaker</th>
+                                        <th >Type</th>
                                     <tr>
                                 </thead>
-                                {% for material in site.data.materials %}
-                                    {% if material.event_id == event.id %}
-                                        <tbody>
-                                            <tr>
-                                                <td>{{ material.title }}</td>
-                                                <td>{{ material.speaker }}</td>
-                                                <td>{{ material.type }}</td>
-                x                            </tr>
-                                        </tbody>                                
-                                    {% endif %}
-                                {% endfor %}
+                                {% for material in event.materials %}
+                                    <tbody>
+                                        <tr>
+                                            <td class="event-table">{{ material.title }}</td>
+                                            <td>{{ material.speaker }}</td>
+                                            <td>{{ material.type }}</td>
+                                        </tr>
+                                    </tbody>      
+                                {% endfor %}                          
                             </table>
                         </div>    
                     </div>                
