--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -410,11 +410,21 @@ pre code {
   border: 1px solid #589958;
   background-color: rgba(88,153,88, 0.70);
 }
+
+.events .back-event-meeting{
+  border: 1px solid #FFFD38;
+  background-color: rgba(255,253,56, 0.50);
+}
+
+
 .events .fa{
   margin-right: 5px;
 }
-.events .event-table{
+.events .event-table-1{
   padding-left: 15px;
+}
+.events .event-table-2{
+  padding-right: 15px; 
 }
 /* ======= Materials page ======== */
 .presentations .title{
