--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,9 +2,18 @@
     <section id="intro" class="modules section">
         <div class="container">
             <h2 class="title text-center">Introduction</h2>
-            <p class="intro text-justify"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate ante a dapibus maximus. Aenean vel porttitor leo. Vivamus at fermentum lacus. Pellentesque luctus pellentesque mauris in tincidunt. Fusce ornare odio vel eleifend accumsan. Proin porttitor id metus vel scelerisque. In justo nibh, placerat sed ullamcorper eget, tempor ut ipsum. Cras mattis dolor et nulla aliquet ornare non ac urna. Phasellus consequat semper odio, sed dignissim orci volutpat sed. Cras sed auctor ipsum. Curabitur et sapien vehicula, mattis ligula sit amet, condimentum odio. Pellentesque tempus felis ac risus malesuada interdum. Ut dapibus felis et enim lobortis, in ornare metus mattis.</p>
+            <div class="intro-div">
+            <p class="intro text-justify"> As GBIF nodes, one of our goals is to highlight our publishers and their data. To achieve this, the Atlas of Living Australia (<a href="https://www.ala.org.au" target="_blank">ALA</a>) developed a huge open source platform with several modules re-usable by other organizations. Since 2013, the community around this tool has organized technical workshops to present ALA modules to other institutions that wanted to implement it, to improve already existing national data portals and to learn from each other’s achievements. </p>
 
-            <p class="intro text-justify"> Mauris fermentum sed velit non blandit. Sed ac justo non purus fringilla volutpat. Nulla massa augue, auctor eu felis et, finibus facilisis nunc. Mauris vitae eros quis est dignissim commodo. Etiam et tempor ante. Phasellus malesuada interdum magna, ut tempor sapien commodo a. Pellentesque aliquet diam sed dolor sodales semper. In scelerisque egestas lobortis. Sed tempus nibh diam, condimentum tincidunt nisl cursus quis. Fusce posuere tortor sed erat tempor commodo at sed velit. Nam a tellus nec libero porta mollis. Pellentesque fermentum ultrices mi, eget facilisis dui consectetur id.  </p>
+            <p class="intro text-justify"> In order to help new users but also to keep on assisting the experienced ones, we try to arrange at least one workshop per year around specific modules of the platform (e.g. species module, spatial portal, etc.). These meetings are really motivating for new users because they can actually realise that, with some developments, they will be able to have a powerful tool running. And at the same time, these training activities are also very productive for partners with ALA portals already running as they have the opportunity to share doubts and ideas, solve technical issues, get assistance from the ALA developers’ team and -in consequence - move forward on the developments of their national data portals. Furthermore, during these technical trainings, we get ideas from other projects and allow the nodes to keep on working significantly on their own.</p>
+
+            <p class="intro text-justify"> Thanks to the previous meetings and other engagements arranged around this topic, at least 11 data portals using ALA technology has been released in production since 2014. Other are still under development (some of them already listed at the new GBIF web page). Katia Cezón from GBIF Spain created a <a href="https://katia.carto.com/builder/92d56bd0-a0e1-11e6-a7e6-0e3ebc282e83/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B-82.58610635020881%2C-78.39843750000001%5D%2C%22sw%22%3A%5B78.9039293885709%2C369.84375%5D%2C%22center%22%3A%5B-11.523087506868514%2C145.72265625000003%5D%2C%22zoom%22%3A2%7D%7D">Carto map</a> showing countries with installation or interest in the ALA infrastructure. </p>
+
+            <p class="intro text-justify"> In this website, you will find documentations and information about participants and the community but also ALA tools. You will be able to access to materials from past events but also news about future events and description of different ways to directly talk with members of the community (through HipChat or mailing list). </p>
+
+
+            <p class="intro text-justify"> You will also be able to see the community in action because we are a group of developers that love to work together and improve tools to help the free and open access to biodiversity data.</p>
+        </div>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
@@ -12,8 +21,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Past and future events</h3>
-                        <p class="text-justify"> <a href="{{ site.url }}/event">LINK</a> <br>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sodales neque, in dignissim diam pulvinar at. Donec venenatis pulvinar erat, a volutpat tellus efficitur. </p>
+                        <p class="text-justify"> You will find the most exhaustive list of all <a href="{{ site.url }}/event">past & future events</a> related to the community. As well as workshops, members have presented their works around ALA tools in different meetings or conferences. In this page, we also highlight the launch in production of data portal based on ALA.</p>
                     </div><!--//content-->
                 </div><!--//item -->  
                 <div class="item col-md-4 col-sm-6 col-xs-12">
