--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -255,10 +255,13 @@ pre code {
   margin-top: 0;
   margin-bottom: 60px;
 }
+.modules .intro-div{
+  margin-bottom: 60px;
+}
 .modules .intro {
   max-width: 800px;
   margin: 0 auto;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
 }
 .modules .item {
   position: relative;
