--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">ALA Mailing List</h3>
-                        <p class="text-justify">Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical questions.</p>
+                        <p class="text-justify">Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> in order to ask any technical or non technical questions to the community.</p>
                     </div><!--//content-->
                 </div><!--//item-->        
             </div>          
