--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -2,35 +2,6 @@
     <section id="docs" class="docs section">
         <div class="container">
             <h2 class="title text-center">Documentation & Links</h2>
-            <!-- <div class="row"> -->
-<!--             <div class="item col-md-4 col-sm-6 col-xs-12">
-                    <div class="icon-holder">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    <div class="content">
-                        <h3 class="sub-title">Past and future events</h3>
-                        <p>The agenda of the community can be found on the <a href="https://www.gbif.org/programme/82953/living-atlases#events" target="_blank">Living Atlases page</a> on the new <a href="https://www.gbif.org">GBIF.org</a> website.  </p>
-                    </div><!-//content
-                </div><!//item -->    
-                <!-- <div class="item col-md-4 col-sm-6 col-xs-12">
-                    <div class="icon-holder">
-                        <i class="fa fa-code"></i>
-                    </div>
-                    <div class="content">
-                        <h3 class="sub-title">HipChat Room</h3>
-                        <p>Developers from the entire community can discuss through an <a href="https://www.hipchat.com/gx1ej3K6Q" target="_blank">HipChat Room</a> hosted by Atlas of Living Australia. If you have any issue or any question related to the installation, development or maintenance of ALA modules, here is the place to go! </p>
-                    </div><!-//content
-                </div>//item--> 
-                <!-- <div class="item col-md-4 col-sm-6 col-xs-12">
-                    <div class="icon-holder">
-                        <i class="fa fa-envelope"></i>
-                    </div>
-                    <div class="content">
-                        <h3 class="sub-title">ALA Mailing List</h3>
-                        <p>Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical questions.</p>
-                    </div><!//content
-                </div><!//item-->        
-            <!-- </div> -->
             <div class="row">  
                  <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
@@ -58,8 +29,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title"> Presentations</h3>
-                        <p class="text-justify"><a href="{{ site.url }}/event">LINK</a> <br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sodales neque, in dignissim diam pulvinar at. Donec venenatis pulvinar erat, a volutpat tellus efficitur. </p>
+                        As much as possible, for each event, we give access to all materials made by members about the community or ALA's platform (talks, posters, videos): <a href="{{ site.url }}/event">more information</a></p>
                     </div><!--//content-->
                 </div><!--//item-->             
             </div><!--//row-->  
@@ -117,7 +87,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">ALA4R</h3>
-                        <p class="text-justify">Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p class="text-justify">ALA4R</p>
                     </div><!--//content-->
                 </div><!--//item-->               
             </div><!--//row-->                      
