correct bugs found by Sophie and Fabien

--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -9,7 +9,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Internationalization</h3>
-                        <p class="text-justify">Some ALA modules have been translated in several languages using Crowdin platform. Translation has been made in Spanish, Catalan, Basque, French and Portuguese. You can access to the project through the <a href="https://crowdin.com/project/ala-i18n" target="_blank">ALA Crowdin project</a></p>
+                        <p class="text-justify">Some ALA modules have been translated in several languages using the Crowdin platform. Translation has been made in Spanish, Catalan, Basque, French and Portuguese. You can access the project through the <a href="https://crowdin.com/project/ala-i18n" target="_blank">ALA Crowdin project</a></p>
                     </div><!--//content-->
                 </div><!--//item--> 
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -18,7 +18,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title"> ALA Key Technical Document</h3>
-                        <p class="text-justify">This document is a contribution to the Encounter Bay (ALA node portal internationalization) project, co-funded by the French, Spanish, Portuguese and Belgian GBIF Nodes and GBIF Secretariat through its Capacity Enhancement Support Programme.</p>
+                        <p class="text-justify">This document is a contribution from the Encounter Bay (ALA node portal internationalization) project, co-funded by the French, Spanish, Portuguese and Belgian GBIF Nodes and GBIF Secretariat through its Capacity Enhancement Support Programme.</p>
                         <p> It is intended to capture the essence of the technical documentation about ALA components necessary for evaluators/adopters to discover, assess, understand, install, configure, customize and operate the tools. </p>
                         <P> Version: <a href="https://www.gbif.org/document/82847/ala-key-technical-documentation-english" target="_blank">English</a>, <a href="https://www.gbif.org/document/82848/ala-key-technical-documentation-french" target="_blank">French</a>, <a href="https://www.gbif.org/document/82850/ala-key-technical-documentation-portugese" target="_blank">Portugese</a>, <a href="https://www.gbif.org/document/82849/ala-key-technical-documentation-spanish" target="_blank">Spanish</a>.</p> 
                     </div><!--//content-->
@@ -29,7 +29,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title"> Presentations</h3>
-                        As much as possible, for each event, we give access to all materials made by members about the community or ALA's platform (talks, posters, videos): <a href="{{ site.url }}/event">more information</a></p>
+                        For each event, we try as much as possible to give access to all materials made by the members about the community or ALA's platform (talks, posters, videos): <a href="{{ site.url }}/event">more information</a></p>
                     </div><!--//content-->
                 </div><!--//item-->             
             </div><!--//row-->  
@@ -78,7 +78,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">BIE</h3>
-                        <p class="text-justify">Specie search</p>
+                        <p class="text-justify">Species search</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
