--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
     <!-- ******FOOTER****** --> 
     <footer class="footer">
         <div class="container text-center">
-            <small class="copyright">Based on the design of <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> under the <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 </a> License (CC BY 3.0) and developed by <a href="www.gbif.fr" target="_blank"> GBIF France</a></small>
+            <small class="copyright">Based on the design of <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> under the <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 </a> License (CC BY 3.0) and developed by <a href="http://www.gbif.fr" target="_blank"> GBIF France</a></small>
         </div><!--//container-->
     </footer><!--//footer-->
      
