--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -7,12 +7,12 @@
 
             <p class="intro text-justify"> In order to help new users but also to keep on assisting the experienced ones, we try to arrange at least one workshop per year around specific modules of the platform (e.g. species module, spatial portal, etc.). These meetings are really motivating for new users because they can actually realise that, with some developments, they will be able to have a powerful tool running. And at the same time, these training activities are also very productive for partners with ALA portals already running as they have the opportunity to share doubts and ideas, solve technical issues, get assistance from the ALA developers’ team and -in consequence - move forward on the developments of their national data portals. Furthermore, during these technical trainings, we get ideas from other projects and allow the nodes to keep on working significantly on their own.</p>
 
-            <p class="intro text-justify"> Thanks to the previous meetings and other engagements arranged around this topic, at least 11 data portals using ALA technology has been released in production since 2014. Other are still under development (some of them already listed at the new GBIF web page). Katia Cezón from GBIF Spain created a <a href="https://katia.carto.com/builder/92d56bd0-a0e1-11e6-a7e6-0e3ebc282e83/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B-82.58610635020881%2C-78.39843750000001%5D%2C%22sw%22%3A%5B78.9039293885709%2C369.84375%5D%2C%22center%22%3A%5B-11.523087506868514%2C145.72265625000003%5D%2C%22zoom%22%3A2%7D%7D">Carto map</a> showing countries with installation or interest in the ALA infrastructure. </p>
+            <p class="intro text-justify"> Thanks to the previous meetings and other engagements arranged around this topic, at least 11 data portals using ALA technology have been released in production since 2014. Other are still under development (some of them are already listed on the new <a href="https://www.gbif.org/the-gbif-network">GBIF web page</a>). Katia Cezón from GBIF Spain created a <a href="https://katia.carto.com/builder/92d56bd0-a0e1-11e6-a7e6-0e3ebc282e83/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B-82.58610635020881%2C-78.39843750000001%5D%2C%22sw%22%3A%5B78.9039293885709%2C369.84375%5D%2C%22center%22%3A%5B-11.523087506868514%2C145.72265625000003%5D%2C%22zoom%22%3A2%7D%7D">Carto map</a> showing countries with ALA installation or interest in the ALA infrastructure. </p>
 
-            <p class="intro text-justify"> In this website, you will find documentations and information about participants and the community but also ALA tools. You will be able to access to materials from past events but also news about future events and description of different ways to directly talk with members of the community (through HipChat or mailing list). </p>
+            <p class="intro text-justify"> On this website, you will find documentation and information about participants and the community but also ALA tools. You will be able to access the materials from past events but also news about future events and different ways to directly talk with members of the community (through HipChat or mailing list). </p>
 
 
-            <p class="intro text-justify"> You will also be able to see the community in action because we are a group of developers that love to work together and improve tools to help the free and open access to biodiversity data.</p>
+            <p class="intro text-justify"> You will also be able to see the community in action because we are a group of developers that love to work together and improve tools to facilitate a free and open access to biodiversity data.</p>
         </div>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -21,7 +21,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Past and future events</h3>
-                        <p class="text-justify"> You will find the most exhaustive list of all <a href="{{ site.url }}/event">past & future events</a> related to the community. As well as workshops, members have presented their works around ALA tools in different meetings or conferences. In this page, we also highlight the launch in production of data portal based on ALA.</p>
+                        <p class="text-justify"> You will find <a href="{{ site.url }}/event">here</a> an exhaustive list of all <a href="{{ site.url }}/event">past & future events</a> related to the community. Members have presented their works around ALA tools in different meetings or conferences through posters, talks and even workshops. In this page, we also highlight the launch in production of data portals based on ALA.</p>
                     </div><!--//content-->
                 </div><!--//item -->  
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -30,7 +30,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">HipChat Room</h3>
-                        <p class="text-justify">Developers from the entire community can discuss through an <a href="https://www.hipchat.com/gx1ej3K6Q" target="_blank">HipChat Room</a> hosted by Atlas of Living Australia. If you have any issue or any question related to the installation, development or maintenance of ALA modules, here is the place to go! </p>
+                        <p class="text-justify">Developers from the entire community can discuss through a <a href="https://www.hipchat.com/gx1ej3K6Q" target="_blank">HipChat Room</a> hosted by Atlas of Living Australia. If you have any issue or any question related to the installation, development or maintenance of ALA modules, here is the place to go! </p>
                     </div><!--//content-->
                 </div><!--//item-->
                  <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -39,7 +39,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">ALA Mailing List</h3>
-                        <p class="text-justify">Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> in order to ask any technical or non technical questions to the community.</p>
+                        <p class="text-justify">Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> in order to ask any technical or non technical question to the community.</p>
                     </div><!--//content-->
                 </div><!--//item-->        
             </div>          
