--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -2,7 +2,7 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
             <h2 class="title">Living <span class="highlight">Atlases</span></h2>
-            <p class="intro">An open community created around Atlas of Living Australia platform. </p>
+            <p class="intro">An open community created around the Atlas of Living Australia platform. </p>
             <div class="btns">
                 <a class="btn btn-cta-secondary" href="http://ala-demo.gbif.org/" target="_blank">Demo</a>
                 <a class="btn btn-cta-primary" href="https://www.gbif.org/programme/82953/living-atlases" target="_blank">GBIF Programme</a>
