solution #3 bug sorting event

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
                 <h2 class="title  text-center">Contact</h2>
                 <div class="author-message">
                     <div class="profile">
-                      <img class="img-responsive" src="{{ site.url }}/public/images/test-contact.jpg" alt="" />
+                      <img class="img-responsive" src="{{ site.github.url }}/public/images/test-contact.jpg" alt="" />
                     </div><!--//profile-->
                     <div class="speech-bubble">
                         <h3 class="sub-title">Want to have more information about the community?</h3>
@@ -21,16 +21,16 @@
              <div class="clearfix"></div>
              <div class="col-md-12 logo">
                 <div class="col-md-3">
-                    <a href="https://www.ala.org.au" target="_blank"><img id="logo-ala" class="img-responsive " src="{{ site.url }}/public/images/ala.gif" alt="Atlas of Living Australia" /></a>
+                    <a href="https://www.ala.org.au" target="_blank"><img id="logo-ala" class="img-responsive " src="{{ site.github.url }}/public/images/ala.gif" alt="Atlas of Living Australia" /></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="https://www.education.gov.au/national-collaborative-research-infrastructure-strategy-ncris" target="_blank"><img id="logo-ncris" class="img-responsive" src="{{ site.url }}/public/images/NCRIS_logo.jpg" alt="NCRIS" /></a>
+                    <a href="https://www.education.gov.au/national-collaborative-research-infrastructure-strategy-ncris" target="_blank"><img id="logo-ncris" class="img-responsive" src="{{ site.github.url }}/public/images/NCRIS_logo.jpg" alt="NCRIS" /></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-csiro" class="img-responsive" src="{{ site.url }}/public/images/csiro.jpg" alt="CSIRO" /></a>
+                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-csiro" class="img-responsive" src="{{ site.github.url }}/public/images/csiro.jpg" alt="CSIRO" /></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-gbif" class="img-responsive" src="{{ site.url }}/public/images/GBIF-2015.png" alt="GBIF" /></a>   
+                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-gbif" class="img-responsive" src="{{ site.github.url }}/public/images/GBIF-2015.png" alt="GBIF" /></a>   
                 </div>
 
             </div>   
