--- a/_includes/event.html
+++ b/_includes/event.html
@@ -50,7 +50,7 @@
                                         <tr>
                                             {%  if material.ext == false %}
                                                 <td class="event-table-1"> 
-                                                    <a href="{{ site.url }}/public/docs/{{ material.link }}" target="_blank">{{ material.title }}</a>
+                                                    <a href="{{ site.github.url }}/public/docs/{{ material.link }}" target="_blank">{{ material.title }}</a>
                                                 </td>
                                             {%  elsif material.ext == true %}
                                                 <td class="event-table-1"> <a href="{{ material.link }}" target="_blank">{{ material.title }}</a></td>
