--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,5 +1,5 @@
     <!-- ******EVENT****** --> 
-    <section id="event" class="modules events section">
+    <section id="events" class="modules events section">
         <div class="container">  
             <h2 class="title text-center">Living Atlases events</h2>  
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
