--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -5,7 +5,7 @@
 {% include head.html %}
 <body data-spy="scroll">
 {% include header.html %}
-{% include event.html %}
+{% include events.html %}
 {% include contact.html %}
 {% include footer.html %}
 </body>
