--- a/_includes/participants.html
+++ b/_includes/participants.html
@@ -71,14 +71,14 @@
                      {% for photo in site.data.carousel %}
                         {% if photo.active == true %}
                             <div class="item active fixed-carrousel">
-                                <img src="{{ site.github.url }}public/images/{{ photo.image_name }}" alt="...">
+                                <img src="{{ site.github.url }}/public/images/{{ photo.image_name }}" alt="...">
                                 <div class="carousel-caption">
                                     {{ photo.caption }}
                                 </div>
                             </div>
                         {% elsif photo.active == false %}
                             <div class="item fixed-carrousel">
-                                <img src="{{ site.github.url }}public/images/{{ photo.image_name }}" alt="...">
+                                <img src="{{ site.github.url }}/public/images/{{ photo.image_name }}" alt="...">
                                 <div class="carousel-caption">
                                     {{ photo.caption }}
                                 </div>
