--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -4,8 +4,8 @@
             <h2 class="title">Living <span class="highlight">Atlases</span></h2>
             <p class="intro">An open community created around the Atlas of Living Australia platform. </p>
             <div class="btns">
-                <a class="btn btn-cta-secondary" href="http://ala-demo.gbif.org/" target="_blank">Demo</a>
-                <a class="btn btn-cta-primary" href="https://www.gbif.org/programme/82953/living-atlases" target="_blank">GBIF Programme</a>
+                <a class="btn btn-cta-secondary" href="https://www.gbif.org/programme/82953/living-atlases" target="_blank">GBIF official program pages</a>
+                <!-- <a class="btn btn-cta-primary" href="http://ala-demo.gbif.org/" target="_blank">GBIF Programme</a> -->
             </div>
             <ul class="meta list-inline">
                 <li class="back-li"><a href="https://github.com/AtlasOfLivingAustralia" target="_blank">View on GitHub</a></li>
