--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                                     {% endif %}
                                 {% endfor %}
                                 {% if flag == false %}
-                                    <a href="{{ site.github.url }}/{{ widget.url }}/">{{ widget.title }}</a></li>
+                                    <a href="{{ site.github.url }}/{{ widget.url }}">{{ widget.title }}</a></li>
                                 {% endif %}
                         {% endfor %}
                     </ul><!--//nav-->
